adding enterprise group component